--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/muller1.ico">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/all.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
